--- a/src/preview/TrackRow.module.css
+++ b/src/preview/TrackRow.module.css
@@ -23,6 +23,7 @@
 
 .art {
   flex-shrink: 0;
+  margin-right: 2px;
 }
 
 .artImg {
